tests/types_first_opaque_types_cycle/types_first_opaque_types_cycle.exp
Error --------------------------------------------------------------------------------------------------------- a.js:3:2

Cannot cast `x` to number because `O` [1] is incompatible with number [2]. [incompatible-cast]

   a.js:3:2
   3| (x: number); // error O ~> number
       ^

References:
   a.js:2:16
   2| declare var x: O;
                     ^ [1]
   a.js:3:5
   3| (x: number); // error O ~> number
          ^^^^^^ [2]



Found 1 error
